# Chat-CLI

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  readme.md
.github/workflows/: release.yml
src/: chat.rs  main.rs
