[package]
name = "gli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
structopt = "0.3"
bincode = "1.3.3"
serde_json = "1.0.94"
termion = "2.0.1"
thiserror = "1.0.39"
